Microdata: HTMLPropertiesCollection does not contain all properties when item is not attached to the DOM tree. https://bugs.webkit.org/show_bug.cgi?id=93456

Reviewed by Ryosuke Niwa.

Source/WebCore:

HTMLPropertiesCollection does not contain the item properties added through
itemref attribute when item is not attached to the DOM tree. We need to
find the root node of the item if its not attached in the document.

It is also possible that itemref attribute of item refers to the root node.
Made changes in getItemRefElements() method so that the traversal should
start from the root node.

Tests: fast/dom/MicroData/add-remove-property-to-item-which-is-not-attached-to-domtree.html
       fast/dom/MicroData/item-not-attached-to-domtree.html
       fast/dom/MicroData/itemref-pointing-to-root-node.html

* dom/DynamicNodeList.cpp:
(WebCore::DynamicNodeListCacheBase::rootNode):
* html/HTMLElement.cpp:
(WebCore::HTMLElement::getItemRefElements):

LayoutTests:

Added tests to ensure that HTMLPropertiesCollection contains all item properties
when item is not attached to the DOM tree.

* fast/dom/MicroData/add-remove-property-to-item-which-is-not-attached-to-domtree-expected.txt: Added.
* fast/dom/MicroData/add-remove-property-to-item-which-is-not-attached-to-domtree.html: Added.
* fast/dom/MicroData/item-not-attached-to-domtree-expected.txt: Added.
* fast/dom/MicroData/item-not-attached-to-domtree.html: Added.
* fast/dom/MicroData/itemref-pointing-to-root-node-expected.txt: Added.
* fast/dom/MicroData/itemref-pointing-to-root-node.html: Added.


Canonical link: https://commits.webkit.org/111446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125157 268f45cc-cd09-0410-ab3c-d52691b4dbfc